--- a/.github/workflows/supernova.yml
+++ b/.github/workflows/supernova.yml
@@ -4,7 +4,7 @@ on:
     branches:
       - ci/supernova
   schedule:
-    - cron: '0 2 * * *' # run at 2 AM UTC
+    - cron: "0 2 * * *" # run at 2 AM UTC
 
 jobs:
   supernova:
@@ -27,9 +27,9 @@ jobs:
 
       - name: setup and start gnoland chain
         run: |
-          docker exec ${{ job.services.gnoland.id }} gnoland -skip-start=true
+          docker exec ${{ job.services.gnoland.id }} gnoland start -skip-start=true
           docker exec ${{ job.services.gnoland.id }} sed -i 's#laddr =.*:26657.*#laddr = "tcp://0.0.0.0:26657"#g' testdir/config/config.toml
-          docker exec -dit ${{ job.services.gnoland.id }} gnoland
+          docker exec -dit ${{ job.services.gnoland.id }} gnoland start
 
       - name: install some softwares
         run: |
@@ -70,5 +70,5 @@ jobs:
 
       - uses: stefanzweifel/git-auto-commit-action@v4
         with:
-          push_options: '--force'
+          push_options: "--force"
           commit_message: add daily report
