--- a/.github/workflows/supernova.yml
+++ b/.github/workflows/supernova.yml
@@ -32,14 +32,10 @@ jobs:
           docker exec ${{ job.services.gnoland.id }} sed -i 's#laddr =.*:26657.*#laddr = "tcp://0.0.0.0:26657"#g' testdir/config/config.toml
           docker exec -dit ${{ job.services.gnoland.id }} gnoland start
 
-      - name: install some softwares
-        run: |
-          sudo apt-get update -y && sudo apt-get install -y wget curl unzip sudo
-
       - name: download supernova
         run: |
           export SUPERNOVA_VERSION=1.0.0
-          wget -c https://github.com/gnolang/supernova/releases/download/v${SUPERNOVA_VERSION}/supernova_${SUPERNOVA_VERSION}_linux_amd64.tar.gz -O - | tar -xz -C /usr/local/bin/
+          wget -c https://github.com/gnolang/supernova/releases/download/v${SUPERNOVA_VERSION}/supernova_${SUPERNOVA_VERSION}_linux_amd64.tar.gz -O - | tar -xz -C /tmp
           # install supernova scripts
           wget -O /tmp/main.zip https://github.com/gnolang/supernova/archive/refs/heads/main.zip
           unzip -d /tmp/ /tmp/main.zip
@@ -48,7 +44,7 @@ jobs:
       - name: run supernova
         run: |
           curl -v http://localhost:26657/status
-          supernova -sub-accounts 5 -transactions 100 -url http://localhost:26657 -mnemonic "source bonus chronic canvas draft south burst lottery vacant surface solve popular case indicate oppose farm nothing bullet exhibit title speed wink action roast" -output result.json
+          /tmp/supernova -sub-accounts 5 -transactions 100 -url http://localhost:26657 -mnemonic "source bonus chronic canvas draft south burst lottery vacant surface solve popular case indicate oppose farm nothing bullet exhibit title speed wink action roast" -output result.json
 
       - name: archive supernova result
         uses: actions/upload-artifact@v3
