--- a/.github/workflows/supernova.yml
+++ b/.github/workflows/supernova.yml
@@ -2,10 +2,7 @@ name: Supernova
 on:
   push:
     branches:
-      - ci/supernova
-  schedule:
-    - cron: "0 2 * * *" # run at 2 AM UTC
-  workflow_dispatch:
+      - ci/supernova-dummy
 
 jobs:
   supernova:
@@ -18,7 +15,7 @@ jobs:
       gnoland:
         image: ghcr.io/gnolang/gno:latest
         # keep the container running
-        options: --workdir /opt/gno/src/gno.land -it --entrypoint "bash"
+        options: --workdir /opt/gno/src/gno.land -it --entrypoint "sh"
         ports:
           - 26657:26657
           - 36657:36657
