--- a/.github/workflows/supernova.yml
+++ b/.github/workflows/supernova.yml
@@ -13,7 +13,7 @@ jobs:
 
     services:
       gnoland:
-        image: ghcr.io/gnolang/gno:latest
+        image: ghcr.io/gnolang/gno/gnoland:latest
         # keep the container running
         options: --workdir /opt/gno/src/gno.land -it --entrypoint "sh"
         ports:
@@ -25,16 +25,16 @@ jobs:
 
       - name: setup and start gnoland chain
         run: |
-          docker exec ${{ job.services.gnoland.id }} gnoland start -skip-start=true
-          docker exec ${{ job.services.gnoland.id }} sed -i 's#laddr =.*:26657.*#laddr = "tcp://0.0.0.0:26657"#g' testdir/config/config.toml
-          docker exec ${{ job.services.gnoland.id }} sed -i 's#skip_timeout_commit = false#skip_timeout_commit = true#g' testdir/config/config.toml
-          docker exec -dit ${{ job.services.gnoland.id }} gnoland start
+          docker exec ${{ job.services.gnoland.id }} gnoland config init
+          docker exec ${{ job.services.gnoland.id }} sed -i 's#laddr =.*:26657.*#laddr = "tcp://0.0.0.0:26657"#g' gnoland-data/config/config.toml
+          docker exec ${{ job.services.gnoland.id }} sed -i 's#skip_timeout_commit = false#skip_timeout_commit = true#g' gnoland-data/config/config.toml
+          docker exec -dit ${{ job.services.gnoland.id }} gnoland start -lazy
 
       - name: download supernova
         run: |
           rm -rf /tmp/main.zip /tmp/supernova-main
 
-          export SUPERNOVA_VERSION=1.0.0
+          export SUPERNOVA_VERSION=1.2.0
           wget -c https://github.com/gnolang/supernova/releases/download/v${SUPERNOVA_VERSION}/supernova_${SUPERNOVA_VERSION}_linux_amd64.tar.gz -O - | tar -xz -C /tmp
           # install supernova scripts
           wget -O /tmp/main.zip https://github.com/gnolang/supernova/archive/refs/heads/main.zip
@@ -44,7 +44,7 @@ jobs:
       - name: run supernova
         run: |
           sleep 10
-          curl -v http://localhost:26657/status
+          curl -v http://127.0.0.1:26657/status
           /tmp/supernova -sub-accounts 10 -transactions 1000 -url http://localhost:26657 -mnemonic "source bonus chronic canvas draft south burst lottery vacant surface solve popular case indicate oppose farm nothing bullet exhibit title speed wink action roast" -output result.json
 
       # - name: archive supernova result
