--- a/.github/workflows/supernova.yml
+++ b/.github/workflows/supernova.yml
@@ -45,7 +45,8 @@ jobs:
         run: |
           sleep 20
           curl -v http://127.0.0.1:26657/status
-          /tmp/supernova -sub-accounts 1 -transactions 10 -url http://localhost:26657 -mnemonic "source bonus chronic canvas draft south burst lottery vacant surface solve popular case indicate oppose farm nothing bullet exhibit title speed wink action roast" -output result.json
+          /tmp/supernova -sub-accounts 5 -transactions 100 -url http://127.0.0.1:26657 -mnemonic "source bonus chronic canvas draft south burst lottery vacant surface solve popular case indicate oppose farm nothing bullet exhibit title speed wink action roast" -output result.json > /dev/null 2>&1
+          cat result.json
 
       # - name: archive supernova result
       #   uses: actions/upload-artifact@v3
@@ -53,18 +54,18 @@ jobs:
       #     name: supernova-result.json
       #     path: result.json
 
-      # - name: Send report to slack \#gno-core-tech
-      #   run: |
-      #     DATA=$(cat result.json | jq -r )
-      #     PAYLOAD="{\"payload\": '$DATA'}"
-      #     curl -X POST -H 'Content-type: application/json' --data "$PAYLOAD" $SLACK_WEBHOOK_URL
-      #   env:
-      #     SLACK_WEBHOOK_URL: ${{ secrets.CI_REPORT_SLACK_WEBHOOK }}
+      - name: Send report to slack \#gno-core-tech
+        run: |
+          DATA=$(cat result.json | jq -r )
+          PAYLOAD="{\"payload\": '$DATA'}"
+          curl -X POST -H 'Content-type: application/json' --data "$PAYLOAD" $SLACK_WEBHOOK_URL
+        env:
+          SLACK_WEBHOOK_URL: ${{ secrets.CI_REPORT_SLACK_WEBHOOK }}
 
-      # - name: move result.json in reports/
-      #   run: |
-      #     mkdir -p reports/supernova
-      #     mv result.json reports/supernova/$(date +"%Y-%m-%d")_report.json
+      - name: move result.json in reports/
+        run: |
+          mkdir -p reports/supernova
+          mv result.json reports/supernova/$(date +"%Y-%m-%d")_report.json
 
       # - uses: stefanzweifel/git-auto-commit-action@v4
       #   with:
