--- a/.github/workflows/supernova.yml
+++ b/.github/workflows/supernova.yml
@@ -46,21 +46,20 @@ jobs:
           sleep 20
           curl -v http://127.0.0.1:26657/status
           /tmp/supernova -sub-accounts 5 -transactions 100 -url http://127.0.0.1:26657 -mnemonic "source bonus chronic canvas draft south burst lottery vacant surface solve popular case indicate oppose farm nothing bullet exhibit title speed wink action roast" -output result.json > /dev/null 2>&1
-          cat result.json
 
-      # - name: archive supernova result
-      #   uses: actions/upload-artifact@v3
-      #   with:
-      #     name: supernova-result.json
-      #     path: result.json
+      - name: archive supernova result
+        uses: actions/upload-artifact@v3
+        with:
+          name: supernova-result.json
+          path: result.json
 
-      - name: Send report to slack \#gno-core-tech
-        run: |
-          DATA=$(cat result.json | jq -r )
-          PAYLOAD="{\"payload\": '$DATA'}"
-          curl -X POST -H 'Content-type: application/json' --data "$PAYLOAD" $SLACK_WEBHOOK_URL
-        env:
-          SLACK_WEBHOOK_URL: ${{ secrets.CI_REPORT_SLACK_WEBHOOK }}
+      # - name: Send report to slack \#gno-core-tech
+      #   run: |
+      #     DATA=$(cat result.json | jq -r )
+      #     PAYLOAD="{\"payload\": '$DATA'}"
+      #     curl -X POST -H 'Content-type: application/json' --data "$PAYLOAD" $SLACK_WEBHOOK_URL
+      #   env:
+      #     SLACK_WEBHOOK_URL: ${{ secrets.CI_REPORT_SLACK_WEBHOOK }}
 
       - name: move result.json in reports/
         run: |
