preparing PR for supernova workflow

--- a/.github/workflows/supernova.yml
+++ b/.github/workflows/supernova.yml
@@ -2,7 +2,10 @@ name: Supernova
 on:
   push:
     branches:
-      - ci/supernova-fix
+      - ci/supernova
+  schedule:
+    - cron: "0 2 * * *" # run at 2 AM UTC
+  workflow_dispatch:
 
 jobs:
   supernova:
@@ -45,7 +48,7 @@ jobs:
         run: |
           sleep 20
           curl -v http://127.0.0.1:26657/status
-          /tmp/supernova -sub-accounts 5 -transactions 100 -url http://127.0.0.1:26657 -mnemonic "source bonus chronic canvas draft south burst lottery vacant surface solve popular case indicate oppose farm nothing bullet exhibit title speed wink action roast" -output result.json > /dev/null 2>&1
+          /tmp/supernova -sub-accounts 10 -transactions 1000 -url http://127.0.0.1:26657 -mnemonic "source bonus chronic canvas draft south burst lottery vacant surface solve popular case indicate oppose farm nothing bullet exhibit title speed wink action roast" -output result.json > /dev/null 2>&1
 
       - name: archive supernova result
         uses: actions/upload-artifact@v3
@@ -53,19 +56,19 @@ jobs:
           name: supernova-result.json
           path: result.json
 
-      # - name: Send report to slack \#gno-core-tech
-      #   run: |
-      #     DATA=$(cat result.json | jq -r )
-      #     PAYLOAD="{\"payload\": '$DATA'}"
-      #     curl -X POST -H 'Content-type: application/json' --data "$PAYLOAD" $SLACK_WEBHOOK_URL
-      #   env:
-      #     SLACK_WEBHOOK_URL: ${{ secrets.CI_REPORT_SLACK_WEBHOOK }}
+      - name: Send report to slack \#gno-core-tech
+        run: |
+          DATA=$(cat result.json | jq -r )
+          PAYLOAD="{\"payload\": '$DATA'}"
+          curl -X POST -H 'Content-type: application/json' --data "$PAYLOAD" $SLACK_WEBHOOK_URL
+        env:
+          SLACK_WEBHOOK_URL: ${{ secrets.CI_REPORT_SLACK_WEBHOOK }}
 
       - name: move result.json in reports/
         run: |
           mkdir -p reports/supernova
           mv result.json reports/supernova/$(date +"%Y-%m-%d")_report.json
 
-      # - uses: stefanzweifel/git-auto-commit-action@v4
-      #   with:
-      #     commit_message: add daily report
+      - uses: stefanzweifel/git-auto-commit-action@v4
+        with:
+          commit_message: add daily report
