--- a/.github/workflows/supernova.yml
+++ b/.github/workflows/supernova.yml
@@ -40,9 +40,9 @@ jobs:
           export SUPERNOVA_VERSION=1.3.1
           wget -c https://github.com/gnolang/supernova/releases/download/v${SUPERNOVA_VERSION}/supernova_${SUPERNOVA_VERSION}_linux_amd64.tar.gz -O - | tar -xz -C /tmp
 
-      # - name: wait Gno to be ready (sleep)
-      #   run: |
-      #     sleep 20
+      - name: wait Gno to be ready (sleep)
+        run: |
+          sleep 20
       
       - name: run supernova
         run: |
