--- a/.github/workflows/supernova.yml
+++ b/.github/workflows/supernova.yml
@@ -9,16 +9,16 @@ on:
 
 jobs:
   supernova:
-    runs-on: [self-hosted, Linux, X64, benchmark-v1]
+    runs-on: ubuntu-latest
 
     permissions:
       contents: write
 
     services:
       gnoland:
-        image: ghcr.io/gnolang/gno:latest
+        image: ghcr.io/gnolang/gno/gnoland:nightly
         # keep the container running
-        options: --workdir /opt/gno/src/gno.land -it --entrypoint "bash"
+        options: --workdir /gnoroot -it --entrypoint "sh"
         ports:
           - 26657:26657
           - 36657:36657
@@ -28,27 +28,25 @@ jobs:
 
       - name: setup and start gnoland chain
         run: |
-          docker exec ${{ job.services.gnoland.id }} gnoland start -skip-start=true
-          docker exec ${{ job.services.gnoland.id }} sed -i 's#laddr =.*:26657.*#laddr = "tcp://0.0.0.0:26657"#g' testdir/config/config.toml
-          docker exec ${{ job.services.gnoland.id }} sed -i 's#skip_timeout_commit = false#skip_timeout_commit = true#g' testdir/config/config.toml
-          docker exec -dit ${{ job.services.gnoland.id }} gnoland start
+          docker exec ${{ job.services.gnoland.id }} gnoland config init
+          docker exec ${{ job.services.gnoland.id }} sed -i 's#laddr =.*:26657.*#laddr = "tcp://0.0.0.0:26657"#g' gnoland-data/config/config.toml
+          docker exec ${{ job.services.gnoland.id }} sed -i 's#skip_timeout_commit = false#skip_timeout_commit = true#g' gnoland-data/config/config.toml
+          docker exec -dit ${{ job.services.gnoland.id }} gnoland start -lazy
 
       - name: download supernova
         run: |
           rm -rf /tmp/main.zip /tmp/supernova-main
-
-          export SUPERNOVA_VERSION=1.0.0
+          export SUPERNOVA_VERSION=1.3.1
           wget -c https://github.com/gnolang/supernova/releases/download/v${SUPERNOVA_VERSION}/supernova_${SUPERNOVA_VERSION}_linux_amd64.tar.gz -O - | tar -xz -C /tmp
-          # install supernova scripts
-          wget -O /tmp/main.zip https://github.com/gnolang/supernova/archive/refs/heads/main.zip
-          unzip -d /tmp/ /tmp/main.zip
-          cp -r /tmp/supernova-main/scripts .
 
+      - name: wait Gno to be ready (sleep)
+        run: |
+          sleep 20
+      
       - name: run supernova
         run: |
-          sleep 10
-          curl -v http://localhost:26657/status
-          /tmp/supernova -sub-accounts 10 -transactions 1000 -url http://localhost:26657 -mnemonic "source bonus chronic canvas draft south burst lottery vacant surface solve popular case indicate oppose farm nothing bullet exhibit title speed wink action roast" -output result.json
+          curl -v http://127.0.0.1:26657/status
+          /tmp/supernova -sub-accounts 10 -transactions 1000 -url http://127.0.0.1:26657 -mnemonic "source bonus chronic canvas draft south burst lottery vacant surface solve popular case indicate oppose farm nothing bullet exhibit title speed wink action roast" -output result.json > /dev/null 2>&1
 
       - name: archive supernova result
         uses: actions/upload-artifact@v3
